Styling changes & index credits

--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 
 </head>
 <body>
-    <h1>CSS Grids PhotoBoard</h1>
-    
+    <div id="page">
+        <div id="container">
+            <h1>CSS Grids PhotoBoard</h1>
+            <h2>Click images to customise</h2>
+            <h3>Illustrations by Matt McCherry</h3>
+        </div>
+        <div id="imgContainer">
+        </div>    
+    </div>
     <div id="container">
-    </div>    
+        <p>© 2018, <a href="http://www.mattmccherry.com">MattMcCherry.com</a> | All rights reserved.</p>
+    </div>
     <!-- Scripts -->
     <script src="app.js"></script>
 </body>
